GenerateMipmaps should generate INVALID_OPERATION in WEBGL 1.0 with EXT_sRGB

According to the OpenGL extension spec EXT_sRGB.txt, EXT_SRGB is based on
ES 2.0 and generateMipmap is not allowed if texture format is SRGB_EXT or
SRGB_ALPHA_EXT.

BUG=769989
TEST=conformance/extensions/ext-sRGB.html

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I6cfce971fdd86480be2505952e0a6d3e1429d222
Reviewed-on: https://chromium-review.googlesource.com/1144652
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576879}
Former-commit-id: c212d589584d15b2835210e9344614626b1f0156